Fix bug that misaligned planets from grid based on screen width

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,6 @@ container {
 
 viewscreen {
   align-items: center;
-  border: 1px solid #0ac;
   display: flex;
   height: 600px;
   justify-content: center;
